<resources>
    <string name="app_name">Easy Dialer</string>
    <string name="easy_dialer">Easy Dialer</string>
    <string name="background_image">background image</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="campagin_heading">Campagin Heading</string>
    <string name="campagin_description">Campagin Description</string>
    <string name="calling_phone_no">Calling Phone No.</string>
    <string name="followup_status">FollowUp Status</string>
    <string name="follow_up_details">Follow Up Details</string>
    <string name="next_followup_date">Next FollowUp Date</string>
    <string name="followup_remarks">FollowUp Remarks</string>
    <string name="type_remarks_here">Type Remarks Here</string>
    <string name="call_now">Call Now</string>
    <string name="stop_amp_next"><![CDATA[Stop & Next]]></string>
    <string name="reset_npassword">Reset\nPassword</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="all_permission_req">Following Permissions are required to run properly</string>
</resources>