<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CampaignDetailsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="18dp"
                android:hint="@string/calling_phone_no"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth=".6dp"
                app:boxStrokeWidthFocused=".9dp"
                app:endIconDrawable="@drawable/baseline_call_24"
                app:endIconMode="custom"
                app:endIconTint="@color/material_dynamic_primary10"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:fontFamily="@font/lato_bold"
                    android:inputType="text"
                    android:text=""
                    android:textColorHint="@color/material_dynamic_primary10"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_followup_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="@string/followup_status"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/material_dynamic_secondary60"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_180sdp"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2"
                            tools:listitem="@layout/rv_follow_up_status" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_customer_details_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="false"
                    android:text="Customer Details"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/material_dynamic_secondary60"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:orientation="vertical">

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_followup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:includeFontPadding="false"
                android:text="@string/follow_up_details"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_followup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/material_dynamic_secondary60"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/datetime"
                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/next_followup_date"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeWidth=".6dp"
                        app:boxStrokeWidthFocused=".9dp"
                        app:endIconDrawable="@drawable/baseline_date_range_24"
                        app:endIconMode="custom"
                        app:endIconTint="@color/material_dynamic_primary10"
                        app:expandedHintEnabled="false"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:enabled="false"
                            android:fontFamily="@font/lato_bold"
                            android:hint="Choose Date &amp; Time"
                            android:inputType="text"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:hint="@string/followup_remarks"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeWidth=".6dp"
                        app:boxStrokeWidthFocused=".9dp"
                        app:expandedHintEnabled="false"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/top">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/lato_bold"
                            android:hint="@string/type_remarks_here"
                            android:inputType="text"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/callnow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="@font/lato_bold"
            android:text="@string/call_now"
            android:textSize="17sp" />


        <Button
            android:id="@+id/stopnext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:fontFamily="@font/lato_bold"
            android:text="@string/stop_amp_next"
            android:textSize="17sp" />

    </LinearLayout>


</RelativeLayout>